Database migration and JWT token

--- a/EastYorkGardenClub.Server/appsettings.json
+++ b/EastYorkGardenClub.Server/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnectionString": "Server=EGE-LEGION7;Database=GardenClubDb;Trusted_Connection=True;TrustServerCertificate=Yes;"
+  },
+  "Jwt": {
+    "Key": "EE23BDA4-686C-41E5-ABD1-14CCA6E62ED3",
+    "Issuer": "EYDCServer",
+    "Audience": "EYDCClient"
+  }
 }
