--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "jwt-decode": "^4.0.0",
+    "material-icons": "^1.13.12",
     "react-router-dom": "^6.20.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
