--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
+    "ionicons": "^7.2.1",
     "jwt-decode": "^4.0.0",
     "material-icons": "^1.13.12",
+    "react-ionicons": "^4.2.1",
     "react-router-dom": "^6.20.1",
     "react-slick": "^0.29.0",
+    "react-social-icons": "^6.7.0",
     "slick-carousel": "^1.8.1"
   }
 }
