Server name change and some backend codes

--- a/EastYorkGardenClub.Server/appsettings.json
+++ b/EastYorkGardenClub.Server/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnectionString": "Server=127.0.0.1,1433;Database=GardenClubDb;User Id=dba;Password=capnet;TrustServerCertificate=True;"
+    "DbConnectionString": "Server=Ege-Legion7;Database=GardenClubDb;User Id=dba;Password=capnet;TrustServerCertificate=True;"
   },
   "Jwt": {
     "Key": "EE23BDA4-686C-41E5-ABD1-14CCA6E62ED3",
