--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "dompurify": "^3.0.6",
     "ionicons": "^7.2.1",
     "jwt-decode": "^4.0.0",
     "material-icons": "^1.13.12",
